--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,21 @@
 
 @tailwind utilities;
 
+textarea {
+    resize: none;
+  }
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  
+  input:focus,
+  select:focus,
+  textarea:focus,
+  button:focus,
+  button:active {
+      outline: none;
+  }
+  
+  button {
+    outline: none !important; 
+  }
